# blender-io-addons

./: README.md  io_import_max.py
LTS/: io_import_max.py
LTS/autodesk_3d_studio/: __init__.py  export_3ds.py  import_3ds.py
io_autodesk_3ds/: __init__.py  export_3ds.py  import_3ds.py
io_autodesk_max/: __init__.py  import_max.py
io_scene_3ds/: Makefile  README.md  __init__.py  export_3ds.py  import_3ds.py  pyproject.toml
io_scene_3ds/io_scene_3ds/: __init__.py  blender_manifest.toml  export_3ds.py  import_3ds.py
io_scene_3ds/manual/: scene_3ds.rst
io_scene_max/: __init__.py  import_max.py
