# SPDX-License-Identifier: GPL-2.0-or-later

[tool.autopep8]
max_line_length = 120
ignore = ["E721", "E722", "E402", "W690"]
aggressive = 2

[project]
name = "io_scene_3ds"
version = "2.8.0"
authors = [{ name="Sebastian Sille", email="nrgsille@gmail.com" }]
description = "Autodesk 3D Studio Blender Extension"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPL Approved :: GPL-2.0-or-later",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nrgsille76/blender-io-addons"
Issues = "https://github.com/nrgsille76/blender-io-addons/issues"

[tool.poetry]
name = "io_scene_3ds"
version = "2.8.0"
description = "Autodesk 3D Studio Blender Extension"
license = "GPL-2.0-or-later"
authors = ["Sebastian Schrand", "Campbell Barton", "Bob Holcomb"]
maintainers = ["Sebastian Sille <nrgsille@gmail.com>"]
readme = "README.md"
homepage = "https://www.nrgsille.com/"
repository = "https://github.com/nrgsille76/blender-io-addons"

[tool.poetry.dependencies]
python = "^3"
